# aclabs

./: .gitignore  README.md  action-runner-prep.sh  index.html  labprep.sh  mkdocs.yml  requirements.txt  requirements.yml  runner-requirements.txt
.cc/: cookiecutter.jsonc
.cc/hooks/: post_gen_project.sh.jinja
.cc/templates/: cc-under-construction-warning.md.jinja  lab-description.md.jinja  lab-extra-info.md.jinja  lab-how-to-run.md.jinja
.cp/: copier.yml
.cp/_macros/: slugify.jinja
.cp/extensions/: _in.py  issubset.py
.cp/{% if 'docs' | _in(templates) %}docs{% endif %}/: {{ lab_slug }}.md.jinja
.cp/{% if 'slides' | _in(templates) %}slides{% endif %}/: {{ lab_slug }}.md.jinja
.devcontainer/: devcontainer.json
.devcontainer/atd-atd-dual-dc/: devcontainer.json
.devcontainer/avd-playground/: devcontainer.json
.github/: labeler.yml  pull_request_template.md
datacenter/: Makefile  README.md  act-inventory.yml  ansible.cfg  tl-act-topology.yml
dc-evpn-vxlan/: README.md  ansible.cfg  inventory.yml
docs/: aclabs-quickstart.md  atd-atd-dual-dc.md  codespaces-quickstart.md  credits.md  cvaas-cvaas-and-avd-demo--evpn-mlag.md  index.md  quickstart.md  tech-library-labs.md  telemetry.md
global_vars/: node-types.yml  routing-defaults.yml
labs/techlib-vxlan-domain-ab/avd/anta/anta_techlib_tests/: pyproject.toml
labs/techlib-vxlan-domain-ab/avd/anta/anta_techlib_tests/anta_techlib_tests/: evpn_multidomain.py  oism.py
labs/techlib-vxlan-domain-ab/avd/anta/anta_techlib_tests/tests/: test_customs.py
slides/: cvaas-cvaas-and-avd-demo--evpn-mlag.md
(+1826 files in other folders)
